@@ -7,6 +7,7 @@ gtk+2.0 (2.24.31-1) UNRELEASED; urgency=medium
   * When linking against libgail18, automatically generate a dependency on
     libgail-common. This was originally achieved via a .shlibs file but since
     we use a .symbols file nowadays, move this over there.
+  * Remove an old shlibs.local hack which doesn't seem necessary anymore.
 
  -- Michael Biebl <biebl@debian.org>  Fri, 09 Sep 2016 23:20:25 +0200
 
